# trax

./: .env  .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
src/: main.rs
src/config/: mod.rs
src/gateway/: mod.rs
src/worker/: mod.rs
