[package]
name = "trax"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/samirdjelal/trax"
documentation = "https://docs.rs/trax"
description = "Application Monitoring and Error Tracking Software"
keywords = ["error", "tracking", "software", "application", "monitoring"]
categories = ["development-tools", "asynchronous", "data-structures"]
authors = [
	"Samir Djelal <ssdjelal@gmail.com>",
]
exclude = [
	".idea/*",
	".github/*",
]

[dependencies]
anyhow = "1.0.57"
threadpool = "1.8.1"
dotenv = "0.15.0"

[dev-dependencies]

[workspace]
members = [
	".",
]
