[package]
name = "trax"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/samirdjelal/trax"
documentation = "https://docs.rs/trax"
description = "Application Monitoring and Error Tracking Software"
keywords = ["error", "tracking", "software", "application", "monitoring"]
categories = ["development-tools", "asynchronous", "data-structures"]
authors = [
	"Samir Djelal <ssdjelal@gmail.com>",
]
exclude = [
	".idea/*",
	".github/*",
]

[dependencies]
threadpool = "1.8.1"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
rand = "0.8.4"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.57"
uuid = { version = "1.1.1", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
validator = "0.15.0"

[dev-dependencies]

[workspace]
members = [
	".",
]
